# studio-steenoven

./: .gitignore  pyproject.toml  readme.md
image_gallery/: admin.py  models.py  views.py
image_gallery/migrations/: 0001_initial.py
image_gallery/templates/image_gallery/: index.html
main/: settings.py  urls.py
