[project]
name = "studio-steenoven"
version = "0.1.0"
description = ""
authors = [
    {name = "Marc",email = "m_a_schotman@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
